Fix sidebar overlapping with navbar

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -670,7 +670,7 @@ $font-fallback-sans: YuGothic,
       isolation: isolate;
       background-color: $bg;
       position: absolute;
-      padding-top: 6px;
+      margin-top: 8px;
       left: 0;
       width: 220px;
       transform: translateX(-220px);
